[gd_scene load_steps=9 format=2]

[ext_resource path="res://game.gd" type="Script" id=1]
[ext_resource path="res://fonts/Ez clicker.tres" type="DynamicFont" id=2]
[ext_resource path="res://maxresdefault.jpg" type="Texture" id=3]
[ext_resource path="res://iuui.jpg" type="Texture" id=4]
[ext_resource path="res://1a437a450812ecdb0c113e853c9b7b84_longread_large.original.png" type="Texture" id=5]
[ext_resource path="res://wow_this_poster_is_so_mlg_____by_volrode_d9rpo0w-pre.jpg" type="Texture" id=6]

[sub_resource type="Theme" id=1]

[sub_resource type="StreamTexture" id=2]
flags = 4
load_path = "res://.import/liygg.jpg-e7f162e1a5943e30cdb78e7beb4bfed6.stex"

[node name="game" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 142.0 ]
}

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
margin_left = 487.0
margin_top = 255.0
margin_right = 527.0
margin_bottom = 295.0
text = "Points"

[node name="Button" type="Button" parent="CanvasLayer/ColorRect"]
margin_left = 432.0
margin_top = 351.0
margin_right = 584.0
margin_bottom = 391.0
text = "click"

[node name="congrats1" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.009
margin_left = 410.0
margin_top = 188.0
margin_right = 665.0
margin_bottom = 217.0
tab_size = 9
text = " Congrats! You clicked alredy 15 times!"

[node name="congrats11" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.009
margin_left = 703.0
margin_top = 536.0
margin_right = 958.0
margin_bottom = 565.0
tab_size = 9
text = " Congrats! You clicked alredy 15 times!"

[node name="congrats2" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.009
margin_left = 419.0
margin_top = 188.0
margin_right = 673.784
margin_bottom = 217.0
tab_size = 9
text = "You can take your 30 clicks
Not bad bro.. not bad "
scroll_active = false

[node name="congrats22" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.009
margin_left = 707.0
margin_top = 507.0
margin_right = 962.0
margin_bottom = 536.0
tab_size = 9
text = "You click 30 times "
scroll_active = false

[node name="congrats3" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 432.0
margin_top = 188.0
margin_right = 325.728
margin_bottom = 217.0
tab_size = 9
text = "bro this is just a boring clicker
Why are you continuing?"
scroll_active = false

[node name="congrats33" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 707.0
margin_top = 476.0
margin_right = 600.728
margin_bottom = 505.0
tab_size = 9
text = "Hooray you did 60 clickes "
scroll_active = false

[node name="congrats4" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 432.0
margin_top = 188.0
margin_right = 325.728
margin_bottom = 217.0
tab_size = 9
text = "Is it because you like getting achievements?"
scroll_active = false

[node name="congrats44" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 707.0
margin_top = 449.0
margin_right = 600.728
margin_bottom = 478.0
tab_size = 9
text = "130 clicks!!!
"
scroll_active = false

[node name="congrats5" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 419.0
margin_top = 188.0
margin_right = 320.728
margin_bottom = 226.0
tab_size = 9
text = "You know that I put them myself and they don't mean anything?"
scroll_active = false

[node name="congrats6" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 432.0
margin_top = 197.0
margin_right = 268.728
margin_bottom = 235.0
tab_size = 9
text = "ABSOLUTLY NOTHING "
scroll_active = false

[node name="congrats7" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 419.0
margin_top = 177.0
margin_right = 309.728
margin_bottom = 235.0
tab_size = 9
text = "	       Alright...  
If you so love getting achviments I can you gave its  "
scroll_active = false

[node name="congrats77" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 707.0
margin_top = 418.0
margin_right = 600.728
margin_bottom = 447.0
tab_size = 9
text = "Wow bro 200 clicks!
"
scroll_active = false

[node name="congrats8" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 703.0
margin_top = 381.0
margin_right = 593.728
margin_bottom = 400.0
tab_size = 9
text = "500 clicks!!!!!"
scroll_active = false

[node name="congrats9" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 703.0
margin_top = 342.0
margin_right = 593.728
margin_bottom = 363.0
tab_size = 9
text = "WOOOOOW 1000 CLIKS BRO "
scroll_active = false

[node name="congrats10" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 665.0
margin_top = 265.0
margin_right = 584.728
margin_bottom = 310.0
theme = SubResource( 1 )
tab_size = 9
text = "Really good man 
"
fit_content_height = true
scroll_active = false

[node name="congrats12" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 611.0
margin_top = 177.0
margin_right = 530.728
margin_bottom = 222.0
theme = SubResource( 1 )
custom_fonts/mono_font = ExtResource( 2 )
tab_size = 9
text = "incredible
"
fit_content_height = true
scroll_active = false

[node name="congrats13" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 391.0
margin_top = 110.0
margin_right = 310.728
margin_bottom = 155.0
theme = SubResource( 1 )
custom_fonts/mono_font = ExtResource( 2 )
tab_size = 9
text = "You are the god of this game
"
fit_content_height = true
scroll_active = false

[node name="congrats14" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 105.0
margin_top = 155.0
margin_right = 24.728
margin_bottom = 200.0
theme = SubResource( 1 )
custom_fonts/mono_font = ExtResource( 2 )
tab_size = 9
text = "I think it's just top notch
"
fit_content_height = true
scroll_active = false

[node name="congrats15" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 73.0
margin_top = 265.0
margin_right = -7.272
margin_bottom = 310.0
theme = SubResource( 1 )
custom_fonts/mono_font = ExtResource( 2 )
tab_size = 9
text = "There is no one better than you

"
fit_content_height = true
scroll_active = false

[node name="congrats16" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 105.0
margin_top = 391.0
margin_right = 24.728
margin_bottom = 436.0
theme = SubResource( 1 )
custom_fonts/mono_font = ExtResource( 2 )
tab_size = 9
text = "OMFG You are amazing

"
fit_content_height = true
scroll_active = false

[node name="congrats17" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 246.0
margin_top = 476.0
margin_right = 165.728
margin_bottom = 521.0
theme = SubResource( 1 )
custom_fonts/mono_font = ExtResource( 2 )
tab_size = 9
text = "Player 10/10

"
fit_content_height = true
scroll_active = false

[node name="congrats18" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 527.0
margin_top = 491.0
margin_right = 446.728
margin_bottom = 536.0
theme = SubResource( 1 )
custom_fonts/mono_font = ExtResource( 2 )
tab_size = 9
text = "Oh god you have e+150 clicks

"
fit_content_height = true
scroll_active = false

[node name="congrats19" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 757.0
margin_top = 505.0
margin_right = 676.728
margin_bottom = 550.0
theme = SubResource( 1 )
tab_size = 9
text = "Beast.. very cool

"
fit_content_height = true
scroll_active = false

[node name="congrats20" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 246.0
margin_top = 320.0
margin_right = 165.728
margin_bottom = 380.0
theme = SubResource( 1 )
tab_size = 9
text = "I don't know what to say anymore, it's just impossible

"
fit_content_height = true
scroll_active = false

[node name="congrats21" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 50.0
margin_top = 536.0
margin_right = -30.272
margin_bottom = 581.0
theme = SubResource( 1 )
tab_size = 9
text = "You already beat the game

"
fit_content_height = true
scroll_active = false

[node name="congrats23" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 757.0
margin_top = 82.0
margin_right = 676.728
margin_bottom = 127.0
theme = SubResource( 1 )
tab_size = 9
text = "There are so many clicks that it is simply impossible to count

"
fit_content_height = true
scroll_active = false

[node name="congrats24" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 73.0
margin_top = 66.0
margin_right = -7.272
margin_bottom = 111.0
theme = SubResource( 1 )
tab_size = 9
text = "CRAZY MAN
"
fit_content_height = true
scroll_active = false

[node name="congrats25" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.303
margin_left = 860.0
margin_top = 188.0
margin_right = 779.728
margin_bottom = 233.0
theme = SubResource( 1 )
tab_size = 9
text = "YOU'RE BEST PLAYER 
"
fit_content_height = true
scroll_active = false

[node name="congrats26" type="Label" parent="CanvasLayer/ColorRect"]
visible = false
margin_left = 368.0
margin_top = 188.0
margin_right = 657.0
margin_bottom = 333.0
custom_fonts/font = ExtResource( 2 )
text = "GOD"

[node name="congrats27" type="RichTextLabel" parent="CanvasLayer/ColorRect"]
visible = false
anchor_right = 0.009
margin_left = 391.0
margin_top = 168.0
margin_right = 665.784
margin_bottom = 235.0
tab_size = 9
text = "
Alright enough.
I'm done with shit, let's do a normal clicker"
scroll_active = false

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
visible = false

[node name="IMG" type="Button" parent="CanvasLayer2"]
margin_left = 246.0
margin_top = -47.0
margin_right = 782.0
margin_bottom = 347.0
icon = SubResource( 2 )
flat = true
expand_icon = true

[node name="IMG2" type="Button" parent="CanvasLayer2"]
margin_top = 31.0
margin_right = 209.0
margin_bottom = 216.0
icon = SubResource( 2 )
flat = true
expand_icon = true

[node name="IMG3" type="Button" parent="CanvasLayer2"]
margin_left = 723.0
margin_top = 351.0
margin_right = 968.0
margin_bottom = 716.0
icon = SubResource( 2 )
flat = true
expand_icon = true

[node name="IMG4" type="Button" parent="CanvasLayer2"]
margin_left = 22.0
margin_top = 342.0
margin_right = 275.0
margin_bottom = 654.0
icon = SubResource( 2 )
flat = true
expand_icon = true

[node name="IMG5" type="Button" parent="CanvasLayer2"]
margin_left = 22.0
margin_top = 200.0
margin_right = 441.0
margin_bottom = 455.0
icon = ExtResource( 4 )
flat = true
expand_icon = true

[node name="IMG6" type="Button" parent="CanvasLayer2"]
margin_left = 584.0
margin_top = 255.0
margin_right = 1000.0
margin_bottom = 530.0
icon = ExtResource( 3 )
flat = true
expand_icon = true

[node name="IMG7" type="Button" parent="CanvasLayer2"]
margin_left = 798.0
margin_top = 16.0
margin_right = 1014.0
margin_bottom = 287.0
icon = ExtResource( 6 )
flat = true
expand_icon = true

[node name="IMG8" type="Button" parent="CanvasLayer2"]
margin_left = 246.0
margin_top = 400.0
margin_right = 723.0
margin_bottom = 594.0
icon = ExtResource( 5 )
flat = true
expand_icon = true

[connection signal="pressed" from="CanvasLayer/ColorRect/Button" to="." method="_on_Button_pressed"]
[connection signal="visibility_changed" from="CanvasLayer/ColorRect/Button" to="." method="_on_Button_visibility_changed"]
